doc/pjdfstest/tests/errors/enametoolong/sidebar-items.js
window.SIDEBAR_ITEMS = {"macro":["enametoolong_comp_test_case","enametoolong_either_comp_test_case","enametoolong_either_path_test_case","enametoolong_path_test_case"]};